--- a/web-data-viz/.env.dev
+++ b/web-data-viz/.env.dev
@@ -2,9 +2,9 @@ AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados
 DB_HOST=localhost
-DB_DATABASE='latencySlayer'
+DB_DATABASE='python'
 DB_USER='root'
-DB_PASSWORD='110645'
+DB_PASSWORD='@Zaqueuchavier123'
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
